    pass backend-specific options to any S3QL command that accepts a
    storage url.

  * The --no-ssl and --ssl-ca-path parameters have been removed. For
    those backends were these parameters make sense, you can use the
    backend options of the same name instead (e.g. instead of
    `--no-ssl` use `--backend-options no-ssl`).

2014-07-28, S3QL 2.10.1

  * 'setup.py install' now also installs the s3ql_verify command.

2014-07-27, S3QL 2.10

  * The internal file system revision has changed. File systems
    created with S3QL 2.10 or newer are not compatible with prior S3QL
    versions. To update an existing file system to the newest
    revision, use the 's3qladm upgrade' command.

    It is strongly recommended to run the (new) s3ql_verify command
    with the --data option at shortly after the upgrade. This is
    necessary to ensure that the upgrade to the next (2.11) S3QL
    release will run smoothly.

  * The User's Guide now contains a description of the possible
    failure modes of mount.s3ql.

  * The --debug command line parameter now generates a bit less
    output by default, and there is an additional --debug-module
    parameter to activate additional messages.

  * When using encryption, S3QL now checks that a storage object's
    key corresponds to the data stored under it.

    The lack of this check in previous versions allowed an attacker
    with control over the storage server to interchange blocks within
    the same file system (which would have resulted in apparent data
    corruption in the file system). Targeted modification of specific
    files, however, would have been very unlikely, because the
    interchange of blocks had to be done blindly (with the attacker
    not knowing which file any block belongs to, nor what its contents
    are).

    Fixes https://bitbucket.org/nikratio/s3ql/issue/52/.

  * S3QL now aborts immediately instead of retrying if the server
    storage server reports that the local clock is skewed.
